<resources>
    <string name="app_name">PupShop</string>
    <string name="contact_name">Contact Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="breed">Breed</string>
    <string name="price">Price</string>
    <string name="gender">Gender</string>
    <string name="description">Description</string>
    <string name="age">Age</string>
    <string name="vaccinated">Vaccinated</string>
</resources>